# ROS2_notes

Epoxsea notes main Robot Operating System 2 (ROS 2)/: README.md  publisher&subscriber.md  ros2_setup.md  template.cpp
Epoxsea notes main Robot Operating System 2 (ROS 2)/custom_interfaces/: CMakeLists.txt  custom interfaces.md  package.xml
Epoxsea notes main Robot Operating System 2 (ROS 2)/custom_interfaces/msg/: CustomMsg.msg
Epoxsea notes main Robot Operating System 2 (ROS 2)/interface/: client.md  new_client.md  server.md
Epoxsea notes main Robot Operating System 2 (ROS 2)/launch file/: launch.md
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/: instruction.md
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/custom_interfaces/: CMakeLists.txt  package.xml
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/custom_interfaces/msg/: CustomMsg.msg
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/my_cpp_pkg/: CMakeLists.txt  package.xml
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/my_cpp_pkg/src/: add_two_ints.cpp  add_two_ints_client.cpp  batteryNode.cpp  batteryPub.cpp  led.cpp  numPub.cpp  numSub.cpp  robonews.cpp  template.cpp
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/my_py_pkg/: how_to_create_a_workspace.txt  setup.py
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/my_py_pkg/my_py_pkg/: add_two_ints_client_nooop.py  add_two_ints_client_oop.py  add_two_ints_server.py  battery.py  ex_1.py  led.py  pub_num.py  (+8 more)
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/my_robot_bringup/: CMakeLists.txt  package.xml
Epoxsea notes main Robot Operating System 2 (ROS 2)/ros2_resource/src/turtlebot/: CMakeLists.txt  package.xml
Epoxsea notes main Robot Operating System 2 (ROS 2)/src/my_cpp_pkg/: CMakeLists.txt
Epoxsea notes main Robot Operating System 2 (ROS 2)/src/my_cpp_pkg/src/: first.cpp
(+2 files in other folders)
